# 14ers-mcp-openai-apps

./: .gitignore  DEPLOYMENT.md  QUICK_START_SUPABASE.md  README.md  build-all.mts  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  server.py  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  upload-to-supabase.mjs  vite.config.mts  xmcp.config.ts
14ers_mcp_openai/: __init__.py
assets/: .gitkeep  mountain-info-9252.html  mountains-9252.html  routes.html  weather.html
src/: vite-env.d.ts
src/mountain-info/: index.tsx  mountain-info.css
src/mountains/: index.tsx  mountains.css
src/routes/: index.tsx  routes.css
src/weather/: index.tsx  weather.css
